# raytracer

./: Cargo.toml  README.md  options.toml  scratch
src/: colour.rs  light.rs  main.rs  material.rs  ray.rs  scene.rs  sphere.rs  tracer.rs  vector.rs
src/shapes/: mod.rs  plane.rs  sphere.rs
