[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forward_ref_generic = "0.2"
image = "0.24"
indicatif = {version = "0.17", features = ["rayon"]}
rayon = "1.5"
rand = "0.8"